--- a/css/common.css
+++ b/css/common.css
@@ -24,7 +24,21 @@ button {
 }
 
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
+  list-style: none;
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.gallery-item{
+  width: 360px;
+  height: 300px;
+}
+
+.gallery-item-img{
+  width: 100%;
+  height: 100%;
 }
